<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="#D50000"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPokemon"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/bulbasaur"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNumeroPokItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/roboto_bold_italic"
                android:gravity="start"
                android:text="@string/n"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewNombrePokItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/roboto_bold_italic"
                android:gravity="start"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewTipoPokItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/roboto_bold_italic"
                android:gravity="start"
                android:text="@string/tipo"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>